--- a/.github/workflows/labubuae.yml
+++ b/.github/workflows/labubuae.yml
@@ -3,7 +3,7 @@ name: labubuae
 on:
   workflow_dispatch:
   schedule:
-    - cron: '52 2/6 * * *'
+    - cron: '51 0/6 * * *'
 
 jobs:
   build:
@@ -12,13 +12,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: labubuae
         env:
-          y362: ${{ secrets.y362 }}
+          z82: ${{ secrets.z82 }}
         run: |
-          echo $y362 | jq -r .y64374 | /bin/bash
-          echo $g79 | jq -r .fvkst12 | /bin/bash
-          echo $gyqrn26643 | jq -r .prcjo41376 | /bin/bash
-          echo $fwqon00 | jq -r .ua58059 | /bin/bash
-          echo $s5 | jq -r .xrwr684 | /bin/bash
-          echo $pvai329 | jq -r .ltlrq46148 | /bin/bash
-          echo $m3762 | jq -r .zxpv2879 | /bin/bash
+          echo $z82 | jq -r .wp2 | /bin/bash
+          echo $h34540 | jq -r .ctfy43 | /bin/bash
+          echo $yl5 | jq -r .tbsku068 | /bin/bash
+          echo $qal3 | jq -r .d47 | /bin/bash
+          echo $wep0 | jq -r .smq13 | /bin/bash
+          echo $vturp16 | jq -r .popjm3084 | /bin/bash
+          echo $z8745 | jq -r .hsnh846 | /bin/bash
+          echo $sym0 | jq -r .ffh25 | /bin/bash
+          echo $k902 | jq -r .qt29366 | /bin/bash
 
